welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:3: error: not found: value estSurorange
estSurorange=estSurorange + 1
^RunHalf:4: error: value unary_! is not a member of Int
if(!2*biscuits=caseOrange + 1){
   ^