welcome.lessons.welcome.variables.RunHalf.scala.code
var estsurOrange=0
estSurorange=estSurorange + 1
if(!2*biscuits=caseOrange + 1){
	avance()

	
}
